--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-helmet": "^6.1.6",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
