--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-helmet": "^6.1.6",
+    "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
@@ -30,6 +31,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.6",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
