--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-helmet": "^6.1.6",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
@@ -29,6 +30,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.6",
+    "styled-components": "^6.0.7",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
